--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -167,19 +167,19 @@ $field-label-affix-padding-horizontal: $form-padding-horizontal !default;
 // $field-label-affix-border-width: $form-border-width !default;
 
 // Fieldset Settings
-$fieldset-style: normal !default;
-$fieldset-border-width: 0 !default;
+// $fieldset-style: normal !default;
+// $fieldset-border-width: 0 !default;
 // $fieldset-border-color: $color-primary !default;
-$fieldset-padding-horizontal: $form-padding-horizontal !default;
-$fieldset-padding-vertical: $form-padding-vertical !default;
-$fieldset-margin-bottom: $x-rem / 2 !default;
+// $fieldset-padding-horizontal: $form-padding-horizontal !default;
+// $fieldset-padding-vertical: $form-padding-vertical !default;
+// $fieldset-margin-bottom: $x-rem / 2 !default;
 
-$legend-margin-bottom: $fieldset-margin-bottom !default;
+// $legend-margin-bottom: $fieldset-margin-bottom !default;
 
 // Field Settings
-$field-padding-horizontal: $form-padding-horizontal !default;
-$field-padding-vertical: $form-padding-vertical !default;
-$field-margin-bottom: $fieldset-margin-bottom !default;
+// $field-padding-horizontal: $form-padding-horizontal !default;
+// $field-padding-vertical: $form-padding-vertical !default;
+// $field-margin-bottom: $fieldset-margin-bottom !default;
 
 // // Table Settings
 // $table-style: normal !default;
