--- a/scss/modules/_layers.scss
+++ b/scss/modules/_layers.scss
@@ -7,7 +7,7 @@
 %layer {
     @extend %row;
     @extend %scroll;
-    @extend %clearfix;
+    @include clearfix;
 
     position: absolute;
     height: 100%;
