--- a/scss/modules/layers/_components.scss
+++ b/scss/modules/layers/_components.scss
@@ -12,7 +12,7 @@
 
 %layer {
     @include position-absolute(0, 0);
-    @extend %clearfix;
+    @include clearfix;
     height: 100%;
     max-height: 100%;
     width: 100%;
@@ -47,7 +47,7 @@
 
 %page {
     @include position-absolute(0, 0);
-    @extend %clearfix;
+    @include clearfix;
     min-height: 100%;
     min-width: 100%;
     margin: 0;
@@ -63,7 +63,7 @@
 }
 
 %card {
-    @extend %clearfix;
+    @include clearfix;
     @extend %shadow-#{$card-shadow-index};
     border-radius: $card-radius;
     margin: $card-margin-vertical $card-margin-horizontal;
@@ -145,7 +145,7 @@
 }
 
 %container {
-    @extend %clearfix;
+    @include clearfix;
     width: 100%;
 
     @if $container-max-width or $container-min-width {
@@ -157,7 +157,7 @@
 }
 
 %pad-container {
-    @extend %clearfix;
+    @include clearfix;
     width: 100%;
     max-width: 100%;
 
