--- a/scss/modules/nav/_components.scss
+++ b/scss/modules/nav/_components.scss
@@ -69,10 +69,10 @@
 }
 
 %nav-horizontal {
-	@extend %clearfix;
+	@include clearfix;
 
 	%nav-menu {
-		@extend %clearfix;
+		@include clearfix;
 		height: 100%;
 		margin-bottom: 0;
 	}
