--- a/scss/modules/panels/_components.scss
+++ b/scss/modules/panels/_components.scss
@@ -6,7 +6,7 @@
 // ----------------
 %panel {
     @include type-scale($panel-scale);
-    @extend %clearfix;
+    @include clearfix;
     display: block;
     width: 100%;
     padding: 0;
@@ -24,13 +24,13 @@
 }
 
 %panel-header {
-    @extend %clearfix;
+    @include clearfix;
     padding: $panel-header-padding;
     border-width: 0 0 $panel-border-width 0;
 }
 
 %panel-body {
-    @extend %clearfix;
+    @include clearfix;
     padding: $panel-section-padding;
     border-width: 0;
 
@@ -40,7 +40,7 @@
 }
 
 %panel-footer {
-    @extend %clearfix;
+    @include clearfix;
     padding: $panel-footer-padding;
     border-width: $panel-border-width 0 0 0;
 }
@@ -49,7 +49,7 @@
 // ----------------
 %alert {
     @include type-scale($alert-scale);
-    @extend %clearfix;
+    @include clearfix;
     display: block;
     width: 100%;
     padding: $alert-padding;
