--- a/scss/modules/tables/_components.scss
+++ b/scss/modules/tables/_components.scss
@@ -49,21 +49,28 @@
 %table-horizontal {
 	@extend %table;
 	
-	&, tbody, thead, tfoot {
-		&, tr {
-			&, th, td {
-				border-left-width: 0;
-				border-right-width: 0;
-			}
-		}
-	}
+	// &, tbody, thead, tfoot {
+	// 	&, tr {
+	// 		&, th, td {
+	// 			border-left-width: 0;
+	// 			border-right-width: 0;
+	// 		}
+	// 	}
+	// }
+    &, * {
+        border-left-width: 0;
+        border-right-width: 0;
+    }
 
+    // thead {
+    //     &, tr {
+    //         &, th, td {
+    //             border-top: 0;
+    //         }
+    //     }
+    // }
     thead {
-        &, tr {
-            &, th, td {
-                border-top: 0;
-            }
-        }
+        &, * { border-top: 0; }
     }
 }
 
