... and adding Material Design icons. Yes, they're awesome.

--- a/scss/modules/global/_mixins.scss
+++ b/scss/modules/global/_mixins.scss
@@ -5,7 +5,7 @@
 @mixin environment($name: all) {
     $environments: if(type-of($name) == list, $name, ($name));
 
-    @if index($environments, $ENVIRONMENT) or $name == all {
+    @if index($environments, $environment) or $name == all {
         @content;
     }
 }
