--- a/scss/modules/fields/_classes.scss
+++ b/scss/modules/fields/_classes.scss
@@ -8,7 +8,7 @@
     }
 }
 
-@include export(field, production) {
+@include export(field) {
     #{prefixed-class('field')} {
         @extend %field;
     }
