--- a/scss/modules/icons/_classes.scss
+++ b/scss/modules/icons/_classes.scss
@@ -3,3 +3,15 @@
 // =============
 
 // Icon Classes
+
+@include export(icons) {
+    #{prefixed-class($icon-prefix)} {
+        @extend %icon;
+    }
+
+    @each $icon-name in map-keys($icon-font-map) {
+        .#{$icon-prefix}-#{$icon-name} {
+            @extend %icon-#{$icon-name};
+        }
+    }
+}
