--- a/scss/modules/icons/_components.scss
+++ b/scss/modules/icons/_components.scss
@@ -18,6 +18,7 @@
         display: inline-block;
         font-family: $icon-font-family;
         font-size: type-scale($icon-scale);
+        font-style: normal;
         vertical-align: $icon-vertical-align;
     }
 
