--- a/scss/modules/grid/_components.scss
+++ b/scss/modules/grid/_components.scss
@@ -16,32 +16,32 @@
     padding-right: $grid-content-padding;
 }
 
-%pad-small {
-	padding: $grid-content-padding-small;
+%pad-half {
+	padding: $grid-content-padding-half;
 }
 
-%pad-vertical-small {
-    padding-top: $grid-content-padding-small;
-    padding-bottom: $grid-content-padding-small;
+%pad-vertical-half {
+    padding-top: $grid-content-padding-half;
+    padding-bottom: $grid-content-padding-half;
 }
 
-%pad-horizontal-small {
-    padding-left: $grid-content-padding-small;
-    padding-right: $grid-content-padding-small;
+%pad-horizontal-half {
+    padding-left: $grid-content-padding-half;
+    padding-right: $grid-content-padding-half;
 }
 
-%pad-large {
-	padding: $grid-content-padding-large;
+%pad-double {
+	padding: $grid-content-padding-double;
 }
 
-%pad-vertical-large {
-    padding-top: $grid-content-padding-large;
-    padding-bottom: $grid-content-padding-large;
+%pad-vertical-double {
+    padding-top: $grid-content-padding-double;
+    padding-bottom: $grid-content-padding-double;
 }
 
-%pad-horizontal-large {
-    padding-left: $grid-content-padding-large;
-    padding-right: $grid-content-padding-large;
+%pad-horizontal-double {
+    padding-left: $grid-content-padding-double;
+    padding-right: $grid-content-padding-double;
 }
 
 %pad-none {
