Added component creation task to gulp file, separated out drawer component

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -38,7 +38,8 @@ $button-text-transform: none;
     'modules/tables/_module',
     'modules/panels/_module',
     'modules/notifications/_module',
-    'modules/images/_module';
+    'modules/images/_module',
+    'modules/drawer/_module';
     /* 'modules/_tabs'; */
     /* 'modules/_dropdowns'; */
     /* 'modules/_alerts'; */
